# contact-detector

./: .gitignore  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INSTALL.md  PHASE1_COMPLETE.md  PHASE6_PERFORMANCE.md  PLAN.md  README.md  run_demo.sh  run_tests.sh
.devcontainer/: Dockerfile  devcontainer.json
benches/: README.md  performance.rs  synthetic_mesh.rs
research/: SKINNER.md  VTK.md
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/contact/: detection.rs  metrics.rs  mod.rs  types.rs
src/io/: exodus.rs  json.rs  metadata.rs  mod.rs  vtm.rs  vtu.rs
src/mesh/: geometry.rs  mod.rs  surface.rs  types.rs
test-data/: README.md  aligned_cubes_10x10x10.exo  aligned_cubes_10x10x10_with_sidesets.exo  cube_cylinder_contact.exo  cube_cylinder_contact_with_sidesets.exo  generate_test_meshes.py  inspect_exodus.py  rotated_cube_contact.exo  rotated_cube_contact_with_sidesets.exo  simple-cube.json  single_hex_contact.exo  single_hex_contact_with_sidesets.exo
tests/: integration_tests.rs
