[package]
name = "contact-detector"
version = "0.1.0"
edition = "2021"
authors = ["Contact Detector Contributors"]
description = "High-performance hexahedral mesh contact pair detection and surface extraction tool"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "contact-detector"
path = "src/main.rs"

[dependencies]
# Exodus II / NetCDF reading (optional - requires libhdf5-dev, libnetcdf-dev)
netcdf = { version = "0.11", optional = true }

# Linear algebra and geometry
nalgebra = "0.33"

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization for config files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress bars
indicatif = "0.17"

# VTK output (will use later)
vtkio = "0.6"

[dev-dependencies]
approx = "0.5"

[features]
default = []
exodus = ["netcdf"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
