[package]
name = "contact-detector"
version = "0.1.0"
edition = "2021"
authors = ["Contact Detector Contributors"]
description = "High-performance hexahedral mesh contact pair detection and surface extraction tool"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "contact-detector"
path = "src/main.rs"

[dependencies]
# Exodus II / NetCDF reading (optional)
# - With 'exodus' feature: requires system libraries (libhdf5-dev, libnetcdf-dev)
# - With 'exodus-static' feature: builds HDF5/NetCDF from source (requires cmake, g++)
netcdf = { version = "0.11", optional = true }

# Linear algebra and geometry
nalgebra = "0.33"

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization for config files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress bars
indicatif = "0.17"

# VTK output
vtkio = "0.6"

# Spatial indexing for contact detection
# Using kiddo as a high-performance k-d tree for nearest neighbor searches
kiddo = "5.2"

# Parallelization for performance (optional)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["exodus-static", "parallel"]
exodus = ["netcdf"]
exodus-static = ["exodus", "netcdf/static"]
parallel = ["rayon"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "performance"
harness = false
